# muhgpt-cli

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
examples/: echo_mcp_server.py  mcp.example.json
muhgpt/: __init__.py  agent.py  api_client.py  arsenal.py  bidi.py  config.py  cvss.py  guard.py  knowledge.py  mcp.py  mcp_defaults.json  packages.py  render.py  research.py  session.py  tools.py  ui.py
muhgpt/skills/vulnerabilities/: auth-jwt.md  csrf.md  idor.md  nosqli.md  open-redirect.md  path-traversal.md  rce.md  sqli.md  ssrf.md  ssti.md  xss.md  xxe.md
scripts/: guard_selftest.py
tests/: conftest.py  guard_corpus.py  test_agent.py  test_api_client.py  test_arsenal.py  test_bidi.py  test_config.py  test_cvss.py  test_guard.py  test_install_intent.py  test_knowledge.py  test_main.py  test_mcp.py  test_packages.py  test_render.py  test_research.py  test_session.py  test_skills.py  test_streaming.py  test_tools.py  test_ui.py
